--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<name>microservice</name>
 	<description>Microservice project for Spring Boot</description>
 	<properties>
+		<sonar.organization>juan-bazurto-eci</sonar.organization>
+  		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
