--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=microservice
+spring.data.mongodb.uri=mongodb+srv://miguel:ZZSvmaO19q3bHfs0@arcn.iyegckd.mongodb.net/?retryWrites=true&w=majority&appName=arcn
+spring.data.mongodb.database=arcn
