--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<sonar.organization>juan-bazurto-eci</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.coverage.exclusions>src/main/java/edu/escuelaing/arcn/microservice/MicroserviceApplication.java</sonar.coverage.exclusions>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
